--- a/views/etudiants/formations-etudiant.ejs
+++ b/views/etudiants/formations-etudiant.ejs
@@ -725,15 +725,15 @@
             </a>
             
             <nav class="header-nav">
-                <a href="./dashboard-etudiant.html" class="nav-item">
+                <a href="./dashboard-etudiant" class="nav-item">
                     <span>🏠</span>
                     Tableau de bord
                 </a>
-                <a href="./formations-etudiant.html" class="nav-item active">
+                <a href="./formations-etudiant" class="nav-item active">
                     <span>📚</span>
                     Mes formations
                 </a>
-                <a href="./planning-calendrier.html" class="nav-item">
+                <a href="./planning-calendrier" class="nav-item">
                     <span>📅</span>
                     Planning
                 </a>
