--- a/views/etudiants/profil.html
+++ b/views/etudiants/profil.html
@@ -694,7 +694,7 @@
     <!-- Header -->
     <header class="header">
         <div class="header-content">
-            <a href="../Visiteurs/home.html" class="logo">
+            <a href="../Visiteurs/home" class="logo">
                 <div class="logo-icon">A+</div>
                 <div class="logo-text">
                     <span class="ads">ADS</span><span class="iam">IAM</span>
@@ -702,19 +702,19 @@
             </a>
             
             <nav class="header-nav">
-                <a href="./dashboard-etudiant.html" class="nav-item">
+                <a href="./dashboard-etudiant" class="nav-item">
                     <span>🏠</span>
                     Tableau de bord
                 </a>
-                <a href="./formations-etudiant.html" class="nav-item">
+                <a href="./formations-etudiant" class="nav-item">
                     <span>📚</span>
                     Mes formations
                 </a>
-                <a href="./planning-calendrier.html" class="nav-item">
+                <a href="/planning-calendrier" class="nav-item">
                     <span>📅</span>
                     Planning
                 </a>
-                <a href="./profil.html" class="nav-item active">
+                <a href="./profil" class="nav-item active">
                     <span>👤</span>
                     Profil
                 </a>
