--- a/views/Visiteurs/formation.ejs
+++ b/views/Visiteurs/formation.ejs
@@ -831,23 +831,7 @@
     </div>
 
     <!-- Header -->
-    <header>
-        <nav>
-            <a href="/accueil" class="logo">
-                <div class="logo-icon">P+</div>
-                <div class="logo-text">
-                    <span class="forma">FORMA</span><span class="pro">PRO+</span>
-                </div>
-            </a>
-            <ul class="nav-links">
-                <li><a href="/formations">Formations</a></li>
-                <li><a href="#financements">Financements</a></li>
-                <li><a href="#evenements">Événements</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="/contact" class="nav-cta">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('../partials/header') %>
 
     <!-- Breadcrumb -->
     <div class="breadcrumb">
